---
config:
  theme: forest
---
classDiagram

    direction BT

    %% ==================================================================
    %% ACTOR HIERARCHY
    %%
    %% Legend of the notation used in this diagram
    %%   ..|>  realization  : "implements" an interface (dashed + hollow triangle)
    %%   --|>  inheritance  : "extends" a class         (solid  + hollow triangle)
    %% Member markers: * = abstract, + public, # protected, - private,
    %%                 ~ package-private (Java default visibility).
    %% Boilerplate (equals/hashCode/toString/compareTo) and simple accessors,
    %% getters/setters and logging helpers are omitted from every box.
    %% Map~K→V~ is read as Map<K, V> (Mermaid generics cannot contain a comma).
    %%
    %% SCOPE: only the actor types. Transaction, TransactionId and Msg appear in
    %% signatures but have no box here - see TransactionBase_UML.mmd and
    %% Messages_UML.mmd.
    %% NOTE: Replica keeps a list of concurrently active transactions, while
    %% Client runs one at a time and queues the rest.
    %% Infrastructure and test plumbing (NetworkChannel, Logger, Main, Props,
    %% InitSystem, Crash/CrashType/CrashStatus and the listener notification
    %% messages) are deliberately omitted.
    %% ==================================================================

    %% namespace actors {

        class AbstractActor {
            <<akka.actor>>
        }

        class DistributedActor {
            <<interface>>
            +ActorRef getSelf()
            +void scheduleTransaction(Transaction transaction)
            +void onTransactionComplete(Transaction transaction)
            +void unicast(Msg msg, ActorRef target)
            +TransactionId getNextTransactionId()
        }

        class AbstractReplica {
            <<abstract>>
            ~int id
            ~boolean initialized
            #Optional~ActorRef~ listener
            +int getSystemNumberOfActors()*
            +void crash(Crash how_to_crash)*
            +void initSystem(InitSystem sysInit)*
        }

        class Replica {
            -Map~Integer→ActorRef~ groupOfReplicas
            -LinkedList~Transaction~ activeTransactions
            -int transactionCounter
            ~int[] positions
            ~int coordinatorID
            +void broadcast(Msg msg, boolean includeSelf)
            +void broadcast(Msg msg)
            +void unicast(Msg msg, ActorRef target)
            +void initSystem(InitSystem sysInit)
            +int getSystemNumberOfActors()
            +void crash(Crash how_to_crash)
            +void scheduleTransaction(Transaction transaction)
            +void onTransactionComplete(Transaction transaction)
            +TransactionId getNextTransactionId()
            +Receive createReceive()
            +void onMessage(Msg msg)
        }

        class AbstractClient {
            <<abstract>>
            -Optional~ActorRef~ defaultTargetReplica
            #Optional~ActorRef~ listener
            -long readTimeoutDelay
            -long writeTimeoutDelay
            +void sendRead(ActorRef replica, int index)*
            +void sendWrite(ActorRef replica, int index, int value)*
        }

        class Client {
            -int transactionCounter
            ~Queue~Transaction~ scheduledTransactions
            ~Transaction currentTransaction
            +void unicast(Msg msg, ActorRef target)
            +void sendRead(ActorRef replica, int index)
            +void sendWrite(ActorRef replica, int index, int value)
            +void scheduleTransaction(Transaction transaction)
            +void onTransactionComplete(Transaction transaction)
            +TransactionId getNextTransactionId()
            +Receive createReceive()
            +void onMessage(Msg msg)
        }
    %% }

    Replica --|> AbstractReplica
    Client --|> AbstractClient
    Replica ..|> DistributedActor
    Client ..|> DistributedActor
    AbstractReplica --|> AbstractActor
    AbstractClient --|> AbstractActor
